#53 integrate save and load model to the UI
