# gen/go/v1/neuralNetwork/openapi.json
@@ -675,8 +675,8 @@
       "LoadNeuralNetworkRequest": {
         "type": "object",
         "properties": {
-          "model": {
-            "$ref": "#/components/schemas/Model"
+          "file": {
+            "type": "string"
           }
         }
       },
